# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
